--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,97 @@
+/*
+dúvidas
+'célula' h1 centralizada?
+trocar background-color de input quando empty?
+
+*/
 body {
     background-color: gainsboro;
 }
 
+input:invalid, input:empty {
+    background-color: red;
+}
+
+input:valid {
+    background-color: lightgreen;
+}
+
+#taxaDI, #taxaJurosPoupanca{
+    background-color:grey;
+}
+
+#montanteLCI{
+    background-color:red;
+    color: chartreuse;
+}
+
+.sliderCapitalInvestido{
+    color: aqua;
+}
+
+#montantePoupanca{
+    background-color: aqua;
+    color: blue;
+}
+
+#montanteCDB{
+    background-color: blue;
+}
+
+
+.cabecalho {
+    color: lawngreen;
+    background-color: fuchsia;
+    width: 50%;
+    justify-content: center;
+    margin: 10px;
+    display: flex;
+}
+
 .capitalInvestido, .meses, .taxaPoupanca, .taxaDI, .taxaLCI, .taxaCDB {
+    color:blue;
     background-color: lavender;
     font-weight: bolder;
-    color:red;
+    
 }
 
 .container {
     display: flex;
-    flex-wrap: wrap;
-    font-size: 20px;
-    text-align: center;
+    flex-flow: row wrap;
+    justify-content: center;
+    
 }
 
 .box-dados {
-    display: grid;
-    background-color: green;
+    display: flex;
+    background-color: indianred;
     text-align: center;
-    display: inline-block;    
+    justify-content: center;
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    margin: 30px;
+    border-style: solid;
+    border-color:darkmagenta;
+    
 }
 
 .box-resultados {
-    display: grid;
+    display: flex;
     display: inline-block;
-    color:blueviolet;
+    justify-content: center;
+    background-color: darkgoldenrod;
+    vertical-align: middle;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     font-weight: bolder;
-    
-    
+    grid-template-columns: 2;
+
+    align-self: center;
+    border: 50px;
+    border-color: brown;
+    border-style: solid;
 }
+
+
