--- a/css/styles.css
+++ b/css/styles.css
@@ -45,4 +45,9 @@ input:valid {
     align-self: center;
 }
 
-
+hr { 
+    display: block;
+    border-style: inset;
+    border-width: 2px;
+    border-color:purple;
+} 
