--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,14 @@ input[type="range"] {
     background: blueviolet;
     border-radius: 5px;
 }
+
+input[type="button"]{
+    font-size: larger;
+    width: 35px;
+    height: 35px;
+    background-color: blueviolet;
+    border-radius: 25px;
+}
   
 #taxaDI, #taxaJurosPoupanca{
     background-color:grey;
@@ -38,6 +46,8 @@ input[id="rangenumber"] {
 
 #montanteCDB, #montanteLCI, #montantePoupanca{
     color: blueviolet;
+    font-size: xx-large;
+    font-weight: bolder;
 }
 
 .container {
@@ -76,7 +86,7 @@ input[id="rangenumber"] {
 hr { 
     display: block;
     border-style: inset;
-    border-width: 2px;
+    border-width: 4px;
     border-color:purple;
 }
 
