--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family:'Roboto', sans-serif;
+}
+
 input:invalid{
     background-color: red;
 }
@@ -17,6 +21,7 @@ input[type="range"] {
 
 input[type="button"]{
     font-size: larger;
+    color: azure;
     width: 35px;
     height: 35px;
     background-color: blueviolet;
